[package]
name = "stratoneers"
version = "0.1.0"
authors = ["Andre Cox"]
edition = "2018"

[dependencies]
bit-set = "0.5.3"
chrono = "0.4.26"
indicatif = "0.17.6"
lazy_static = "1.4.0"
packed_simd = "0.3.9"
rayon = "1.7.0"
rodio = "0.17.1"

[dependencies.paris]
version = "1.5.15"
features = ["timestamps", "macros"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

